<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >

    <SlidingDrawer
        android:id="@+id/drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill"
        android:content="@+id/content"
        android:handle="@+id/handle_image_view"
        android:orientation="horizontal"

        android:rotation="0">


        <Button
            android:id="@id/handle_image_view"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:background="@mipmap/ic_filter_alt"
            android:contentDescription="@string/filter_label"
            android:drawableTop="@mipmap/ic_filter_alt"
            android:foreground="@mipmap/ic_filter_alt"
            android:foregroundGravity="fill_horizontal|fill_vertical"
            android:gravity="top"


            android:rotation="0" />

        <FrameLayout
            android:id="@id/content"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:alpha="1.0"
            android:background="#E6009688"
            android:rotation="0"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_vertical"
                android:layout_marginTop="100dp"

                android:fontFamily="@font/kalam"
                android:text="@string/filter_label"
                android:textAlignment="center"
                android:textSize="42sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_margin="20dp"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/drawer_water_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"


                        android:text="@string/waterLabel"
                        android:textColorHighlight="#020202" />


                    <CheckBox
                        android:id="@+id/drawer_drinkable_checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:visibility="invisible"

                        android:text="@string/drinkable_label"
                        android:textColorHighlight="#020202" />

                </LinearLayout>

                <CheckBox
                    android:id="@+id/drawer_electricity_checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:text="@string/electricityLabel"
                    android:textColorHighlight="#020202" />
                <CheckBox
                    android:id="@+id/drawer_internet_checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:text="@string/internet_label"
                    android:textColorHighlight="#020202" />
                <CheckBox
                    android:id="@+id/drawer_dump_checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:text="@string/dumpster_label"
                    android:textColorHighlight="#020202" />


                <CheckBox
                    android:id="@+id/drawer_drain_checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:text="@string/grey_water_drain_label"
                    android:textColorHighlight="#020202" />
                <CheckBox
                    android:id="@+id/drawer_blackWater_checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:visibility="invisible"
                    android:textColorHighlight="#020202"
                    android:text="@string/black_water_drain_label"
                    />

            </LinearLayout>
        </FrameLayout>
    </SlidingDrawer>

</FrameLayout>