<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>
    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="2dp"
        android:layout_row="4"
        android:layout_column="3"

        >



        <TextView
            android:id="@+id/coordinatesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowSpan="2"

            android:layout_gravity="fill_horizontal"
            android:textAlignment="center"
            android:layout_column="0"

            android:layout_columnSpan="3"
            />


        <CheckBox
            android:id="@+id/water_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:text="@string/waterLabel"
            android:textSize="12sp" />


        <CheckBox
            android:id="@+id/electricity_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:text="@string/electricityLabel"
            android:textSize="12sp" />


        <CheckBox
            android:id="@+id/drinkable_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/drinkable_label"
            android:textSize="12sp"
            android:visibility="invisible" />

        <CheckBox
            android:id="@+id/internet_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:text="@string/internet_label"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/dumpster_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/dumpster_label"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/drain_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:text="@string/grey_water_drain_label"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:minHeight="50dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_row="4"


            android:layout_columnSpan="3"
            android:layout_column="0"
            android:text="TextView" />


    </GridLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

</LinearLayout>